syntax = "proto3";

option csharp_namespace = "BankClientgPRCService.Protos";

package user;
 
service UserService{
  rpc GetUser(GetUserRequest) returns (UserReply);
}
 
message GetUserRequest{
  string phone = 1;
}
 
message UserReply{
  string id = 1;
  string name = 2;
  string phone = 3;
}

